# cm3065_final

./: .gitignore
cm3036/: ISP-FINAL.md  code.md  report.md
cm3036/.obsidian/: workspace.json
ex1/: pyproject.toml
ex1/cm3065/: ex1.py  opencv.py  try.py
ex2/: pyproject.toml
ex2/cm3065/: ex2.py  exercise2.py  rice.py
ex3/cm3065/: convert.py
exercise1/.ipynb_checkpoints/: 1.1-checkpoint.ipynb  1.2-checkpoint.ipynb
exercise1/cm3065/: ex1.py
exercise2/: pyproject.toml
exercise2/.ipynb_checkpoints/: exercise_2-checkpoint.ipynb
exercise2/cm3065/: ex2.py
exercise3/: pyproject.toml  report.txt
exercise3/.ipynb_checkpoints/: 3-checkpoint.ipynb  exercise_3-checkpoint.ipynb
