[project]
name = "cm3036"
version = "0.1.0"

authors = [
    { name = "Freddie Hill", email = "your.email@example.com" },
]
dependencies = [
    "opencv",
    # "pandas",
    "ipykernel",
    # "numpy",
    # "matplotlib"
]
requires-python = ">=3.11"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."] # Search for packages in the current directory
# include = ["my_tf_project*"] # Include the 'my_tf_project' package
#
# [tool.black]
# line-length = 88
# target-version = ['py39']
#
# [tool.isort]
# profile = "black"
#
# [tool.mypy]
# ignore_missing_imports = true
#
#



