[project]
name = "cm3036"
version = "0.1.0"

authors = [
    { name = "Freddie Hill", email = "your.email@example.com" },
]
dependencies = [
    "opencv-python",
    "numpy",
    # "pandas",
    "ipykernel",
    # "numpy",
    # "matplotlib"
]
requires-python = ">=3.11"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# poetry install --no-root
